--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
@@ -29,17 +29,24 @@ ext.moduleInfo = [
         "APPTest"                   : [
                 "version"         : "",
                 "artifactId"      : "",
-                "dependenciesList": ["LibWrapper"]
+                "apidependenciesList": [
+                        "LibWrapper"
+                ],
+                "specialdependenciesList": [
+                        "kapt": [
+                                "com.bihe0832.android:lib-router-compiler:2.0.15"
+                        ]
+                ]
         ],
         "RouterAnnotation"          : [
                 "version"         : "2.0.13",
                 "artifactId"      : "lib-router-annotation",
-                "dependenciesList": []
+                "apidependenciesList": []
         ],
         "RouterCompiler"            : [
                 "version"         : "2.0.15",
                 "artifactId"      : "lib-router-compiler",
-                "dependenciesList": [
+                "apidependenciesList": [
                         'com.squareup:javapoet:1.8.0',
                         'com.google.auto.service:auto-service:1.0-rc3',
                         "Router","RouterAnnotation"
@@ -49,14 +56,14 @@ ext.moduleInfo = [
         "Router"                    : [
                 "version"         : "2.0.15",
                 "artifactId"      : "lib-router",
-                "dependenciesList": [
+                "apidependenciesList": [
                         "org.jetbrains.kotlin:kotlin-stdlib:${project.kotlin_version}"
                 ]
         ],
         "LibAndroid"                : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-android",
-                "dependenciesList": [
+                "apidependenciesList": [
                         "com.android.support:appcompat-v7:${project.android_support_version}",
                         "com.android.support:recyclerview-v7:${project.android_support_version}",
                         "com.android.support:support-annotations:$project.android_support_version",
@@ -67,43 +74,43 @@ ext.moduleInfo = [
         "LibLog"                    : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-log",
-                "dependenciesList": ["LibAndroid"]
+                "apidependenciesList": ["LibAndroid"]
         ],
 
         "LibCommonUtils"            : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-utils-common",
-                "dependenciesList": ["LibAndroid", "LibLog"]
+                "apidependenciesList": ["LibAndroid", "LibLog"]
         ],
         "LibCommonUIUtils"          : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-ui-common",
-                "dependenciesList": ["LibAndroid", "LibLog"]
+                "apidependenciesList": ["LibAndroid", "LibLog"]
         ],
         "LibThread"                 : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-thread",
-                "dependenciesList": []
+                "apidependenciesList": []
         ],
         "LibEncrypt"                : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-encrypt",
-                "dependenciesList": ["LibLog"]
+                "apidependenciesList": ["LibLog"]
         ],
         "LibChannel"                : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-channel",
-                "dependenciesList": ["LibLog"]
+                "apidependenciesList": ["LibLog"]
         ],
         "LibRequest"                : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-request",
-                "dependenciesList": []
+                "apidependenciesList": []
         ],
         "LibGson"                   : [
                 "version"         : "2.0.10",
                 "artifactId"      : "lib-gson",
-                "dependenciesList": [
+                "apidependenciesList": [
                         "com.google.code.gson:gson:${project.gson_version}",
                         "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${project.kotlin_version}",
                         "LibCommonUtils",
@@ -112,42 +119,42 @@ ext.moduleInfo = [
         "LibHttpCommon"             : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-http-common",
-                "dependenciesList": ["LibThread", "LibLog"]
+                "apidependenciesList": ["LibThread", "LibLog"]
         ],
         "LibHttpAdvanced"           : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-http-advanced",
-                "dependenciesList": ["LibHttpCommon", "LibGson"]
+                "apidependenciesList": ["LibHttpCommon", "LibGson"]
         ],
         "LibSqlite"                 : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-sqlite",
-                "dependenciesList": []
+                "apidependenciesList": []
         ],
         "LibFragmentation_core"     : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-fragmentation-core",
-                "dependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibFragmentation"          : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-fragmentation",
-                "dependenciesList": ["LibFragmentation_core"]
+                "apidependenciesList": ["LibFragmentation_core"]
         ],
         "LibFragmentation_swipeback": [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-fragmentation-swipeback",
-                "dependenciesList": ["LibFragmentation"]
+                "apidependenciesList": ["LibFragmentation"]
         ],
         "LibFlycoTabLayout"         : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-flycotablayout",
-                "dependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibQRCode"                 : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-qrcode",
-                "dependenciesList": [
+                "apidependenciesList": [
                         'com.google.zxing:core:3.3.0',
                         "LibCommonUIUtils"
                 ]
@@ -155,12 +162,12 @@ ext.moduleInfo = [
         "LibAdapter"                : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-adapter",
-                "dependenciesList": ["LibCommonUIUtils"]
+                "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibRefresh"                : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-refresh",
-                "dependenciesList": [
+                "apidependenciesList": [
                         'com.github.ybq:Android-SpinKit:1.0.2',
                         "LibAdapter"
                 ]
@@ -168,47 +175,47 @@ ext.moduleInfo = [
         "LibDeviceNetwork"          : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-device-network",
-                "dependenciesList": ["LibCommonUtils"]
+                "apidependenciesList": ["LibCommonUtils"]
         ],
         "LibTimer"                  : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-timer",
-                "dependenciesList": ["LibThread", "LibLog"]
+                "apidependenciesList": ["LibThread", "LibLog"]
         ],
         "LibConfig"                 : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-config",
-                "dependenciesList": ["LibCommonUtils"]
+                "apidependenciesList": ["LibCommonUtils"]
         ],
         "LibToast"                  : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-toast",
-                "dependenciesList": ["LibThread"]
+                "apidependenciesList": ["LibThread"]
         ],
         "LibAPK"                    : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-utils-apk",
-                "dependenciesList": ["LibToast", "LibLog"]
+                "apidependenciesList": ["LibToast", "LibLog"]
         ],
         "LibTTS"                    : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-tts",
-                "dependenciesList": ["LibConfig"]
+                "apidependenciesList": ["LibConfig"]
         ],
         "LibFile"                   : [
                 "version"         : "2.0.5",
                 "artifactId"      : "lib-file",
-                "dependenciesList": ["LibEncrypt", "LibCommonUtils"]
+                "apidependenciesList": ["LibEncrypt", "LibCommonUtils"]
         ],
         "LibDownloadAndInstall"     : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-download-install",
-                "dependenciesList": ["LibFile", "LibThread"]
+                "apidependenciesList": ["LibFile", "LibThread"]
         ],
         "LibImage"                  : [
                 "version"         : "2.0.17",
                 "artifactId"      : "lib-image",
-                "dependenciesList": [
+                "apidependenciesList": [
                         "com.github.bumptech.glide:glide:${project.glide_version}",
                         "com.github.bumptech.glide:okhttp3-integration:${project.glide_version}",
                         "LibLog"
@@ -217,17 +224,17 @@ ext.moduleInfo = [
         "LibDialog"                 : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-dialog",
-                "dependenciesList": ["LibThread", "LibImage", "LibCommonUIUtils"]
+                "apidependenciesList": ["LibThread", "LibImage", "LibCommonUIUtils"]
         ],
         "LibNotification"           : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-notification",
-                "dependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
+                "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
         "LibUIUtils"                : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-uiutils",
-                "dependenciesList": [
+                "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification"
                 ]
@@ -235,7 +242,7 @@ ext.moduleInfo = [
         "LibUtils"                  : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-utils",
-                "dependenciesList": [
+                "apidependenciesList": [
                         "Router","RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
                         "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
                         "LibAPK", "LibTTS"
@@ -244,6 +251,6 @@ ext.moduleInfo = [
         "LibWrapper"                : [
                 "version"         : "2.0.18",
                 "artifactId"      : "lib-wrapper",
-                "dependenciesList": ["LibUtils", "LibUIUtils"]
+                "apidependenciesList": ["LibUtils", "LibUIUtils"]
         ]
 ]
