--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext.mainProject = "APPTest"
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibText,LibAPK,LibDialog,LibSuperAPP"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,15 +27,15 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.0.18"
+ext.moduleVersionName = "2.1.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
 
         "APPTest"                   : [
-                "version"         : "",
-                "artifactId"      : "",
-                "apidependenciesList": [
+                "version"                : "",
+                "artifactId"             : "",
+                "apidependenciesList"    : [
                         "LibWrapper"
                 ],
                 "specialdependenciesList": [
@@ -44,31 +44,53 @@ ext.moduleInfo = [
                         ]
                 ]
         ],
+        "LibUIUtils"                : [
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-uiutils",
+                "apidependenciesList": [
+                        "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
+                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification"
+                ]
+        ],
+        "LibUtils"                  : [
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-utils",
+                "apidependenciesList": [
+                        "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
+                        "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
+                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP"
+                ]
+        ],
+        "LibWrapper"                : [
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-wrapper",
+                "apidependenciesList": ["LibUtils", "LibUIUtils"]
+        ],
         "RouterAnnotation"          : [
-                "version"         : "2.0.13",
-                "artifactId"      : "lib-router-annotation",
+                "version"            : "2.0.13",
+                "artifactId"         : "lib-router-annotation",
                 "apidependenciesList": []
         ],
         "RouterCompiler"            : [
-                "version"         : "2.0.15",
-                "artifactId"      : "lib-router-compiler",
+                "version"            : "2.0.15",
+                "artifactId"         : "lib-router-compiler",
                 "apidependenciesList": [
                         'com.squareup:javapoet:1.8.0',
                         'com.google.auto.service:auto-service:1.0-rc3',
-                        "Router","RouterAnnotation"
+                        "Router", "RouterAnnotation"
 
                 ]
         ],
         "Router"                    : [
-                "version"         : "2.0.15",
-                "artifactId"      : "lib-router",
+                "version"            : "2.0.15",
+                "artifactId"         : "lib-router",
                 "apidependenciesList": [
                         "org.jetbrains.kotlin:kotlin-stdlib:${project.kotlin_version}"
                 ]
         ],
         "LibAndroid"                : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-android",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-android",
                 "apidependenciesList": [
                         "com.android.support:appcompat-v7:${project.android_support_version}",
                         "com.android.support:recyclerview-v7:${project.android_support_version}",
@@ -78,44 +100,44 @@ ext.moduleInfo = [
                 ]
         ],
         "LibLog"                    : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-log",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-log",
                 "apidependenciesList": ["LibAndroid"]
         ],
 
         "LibCommonUtils"            : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-utils-common",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-utils-common",
                 "apidependenciesList": ["LibAndroid", "LibLog"]
         ],
         "LibCommonUIUtils"          : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-ui-common",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-ui-common",
                 "apidependenciesList": ["LibAndroid", "LibLog"]
         ],
         "LibThread"                 : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-thread",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-thread",
                 "apidependenciesList": []
         ],
         "LibEncrypt"                : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-encrypt",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-encrypt",
                 "apidependenciesList": ["LibLog"]
         ],
         "LibChannel"                : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-channel",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-channel",
                 "apidependenciesList": ["LibLog"]
         ],
         "LibRequest"                : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-request",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-request",
                 "apidependenciesList": []
         ],
         "LibGson"                   : [
-                "version"         : "2.0.10",
-                "artifactId"      : "lib-gson",
+                "version"            : "2.0.10",
+                "artifactId"         : "lib-gson",
                 "apidependenciesList": [
                         "com.google.code.gson:gson:${project.gson_version}",
                         "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${project.kotlin_version}",
@@ -123,104 +145,104 @@ ext.moduleInfo = [
                 ]
         ],
         "LibHttpCommon"             : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-http-common",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-http-common",
                 "apidependenciesList": ["LibThread", "LibLog"]
         ],
         "LibHttpAdvanced"           : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-http-advanced",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-http-advanced",
                 "apidependenciesList": ["LibHttpCommon", "LibGson"]
         ],
         "LibSqlite"                 : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-sqlite",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-sqlite",
                 "apidependenciesList": []
         ],
         "LibFragmentation_core"     : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-fragmentation-core",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-fragmentation-core",
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibFragmentation"          : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-fragmentation",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-fragmentation",
                 "apidependenciesList": ["LibFragmentation_core"]
         ],
         "LibFragmentation_swipeback": [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-fragmentation-swipeback",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-fragmentation-swipeback",
                 "apidependenciesList": ["LibFragmentation"]
         ],
         "LibFlycoTabLayout"         : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-flycotablayout",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-flycotablayout",
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibQRCode"                 : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-qrcode",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-qrcode",
                 "apidependenciesList": [
                         'com.google.zxing:core:3.3.0',
                         "LibCommonUIUtils"
                 ]
         ],
         "LibAdapter"                : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-adapter",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-adapter",
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibRefresh"                : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-refresh",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-refresh",
                 "apidependenciesList": [
                         'com.github.ybq:Android-SpinKit:1.0.2',
                         "LibAdapter"
                 ]
         ],
         "LibDeviceNetwork"          : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-device-network",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-device-network",
                 "apidependenciesList": ["LibCommonUtils"]
         ],
         "LibTimer"                  : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-timer",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-timer",
                 "apidependenciesList": ["LibThread", "LibLog"]
         ],
         "LibConfig"                 : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-config",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-config",
                 "apidependenciesList": ["LibCommonUtils"]
         ],
         "LibToast"                  : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-toast",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-toast",
                 "apidependenciesList": ["LibThread"]
         ],
         "LibAPK"                    : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-utils-apk",
-                "apidependenciesList": ["LibToast", "LibLog"]
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-utils-apk",
+                "apidependenciesList": ["LibToast", "LibLog", "LibEncrypt"]
         ],
         "LibTTS"                    : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-tts",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-tts",
                 "apidependenciesList": ["LibConfig"]
         ],
         "LibFile"                   : [
-                "version"         : "2.0.5",
-                "artifactId"      : "lib-file",
+                "version"            : "2.0.5",
+                "artifactId"         : "lib-file",
                 "apidependenciesList": ["LibEncrypt", "LibCommonUtils"]
         ],
         "LibDownloadAndInstall"     : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-download-install",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-download-install",
                 "apidependenciesList": ["LibFile", "LibThread"]
         ],
         "LibImage"                  : [
-                "version"         : "2.0.17",
-                "artifactId"      : "lib-image",
+                "version"            : "2.0.17",
+                "artifactId"         : "lib-image",
                 "apidependenciesList": [
                         "com.github.bumptech.glide:glide:${project.glide_version}",
                         "com.github.bumptech.glide:okhttp3-integration:${project.glide_version}",
@@ -228,35 +250,23 @@ ext.moduleInfo = [
                 ]
         ],
         "LibDialog"                 : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-dialog",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-dialog",
                 "apidependenciesList": ["LibThread", "LibImage", "LibCommonUIUtils"]
         ],
         "LibNotification"           : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-notification",
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-notification",
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
-        "LibUIUtils"                : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-uiutils",
-                "apidependenciesList": [
-                        "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
-                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification"
-                ]
+        "LibText"                   : [
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-text",
+                "apidependenciesList": ["LibAndroid"]
         ],
-        "LibUtils"                  : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-utils",
-                "apidependenciesList": [
-                        "Router","RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
-                        "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
-                        "LibAPK", "LibTTS"
-                ]
-        ],
-        "LibWrapper"                : [
-                "version"         : "2.0.18",
-                "artifactId"      : "lib-wrapper",
-                "apidependenciesList": ["LibUtils", "LibUIUtils"]
+        "LibSuperAPP"               : [
+                "version"            : "2.0.18",
+                "artifactId"         : "lib-super-app",
+                "apidependenciesList": ["LibDialog", "LibAPK"]
         ]
 ]
