--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
- * 当前如果全量填"LibAndroid,LibThread,LibCommonUtils,LibCommonUIUtils,LibRequest,LibSqlite"
+ * 当前如果全量填"LibDebug"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibDebug,LibCustomView"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.1.0"
+ext.moduleVersionName = "2.2.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -49,7 +49,7 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-uiutils",
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
-                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification"
+                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification","LibCustomView"
                 ]
         ],
         "LibUtils"                  : [
@@ -58,7 +58,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
                         "LibGson", "LibHttpAdvanced", "LibSqlite", "LibDeviceNetwork", "LibDownloadAndInstall",
-                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP"
+                        "LibAPK", "LibTTS", "LibText", "LibSuperAPP", "LibDebug"
                 ]
         ],
         "LibWrapper"                : [
@@ -268,5 +268,17 @@ ext.moduleInfo = [
                 "version"            : "2.1.0",
                 "artifactId"         : "lib-super-app",
                 "apidependenciesList": ["LibDialog", "LibAPK"]
+        ],
+        "LibDebug"                  : [
+                "version"            : "2.1.0",
+                "artifactId"         : "lib-debug",
+                "apidependenciesList": ["LibDialog", "LibToast"]
+        ],
+        "LibCustomView"                  : [
+                "version"            : "2.1.0",
+                "artifactId"         : "lib-custom-view",
+                "apidependenciesList": ["LibAndroid"]
         ]
 ]
+
+
