--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "APPTest"
+ext.mainProject = "LibCustomView"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibDebug"
  */
-ext.developModule = "LibDebug,LibCustomView"
+ext.developModule = "LibCustomView"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -275,7 +275,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibDialog", "LibToast"]
         ],
         "LibCustomView"                  : [
-                "version"            : "2.1.0",
+                "version"            : "2.2.0",
                 "artifactId"         : "lib-custom-view",
                 "apidependenciesList": ["LibAndroid"]
         ]
