--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
- * 当前如果全量填"LibDebug"
+ * 当前如果全量填"LibDebug,LibRecycleviewExt"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibNotification,LibRequest,LibRecycleviewExt"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -49,7 +49,8 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-uiutils",
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
-                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification","LibCustomView"
+                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification","LibCustomView",
+                        "LibRecycleviewExt"
                 ]
         ],
         "LibUtils"                  : [
@@ -278,6 +279,11 @@ ext.moduleInfo = [
                 "version"            : "2.2.0",
                 "artifactId"         : "lib-custom-view",
                 "apidependenciesList": ["LibAndroid"]
+        ],
+        "LibRecycleviewExt"                  : [
+                "version"            : "2.2.0",
+                "artifactId"         : "lib-recycleview-ext",
+                "apidependenciesList": ["LibRefresh"      ]
         ]
 ]
 
