--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibWrapper"
+ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"Framework"
  */
-ext.developModule = "LibWrapper"
+ext.developModule = "LibDeviceNetwork"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "2.5.4"
+ext.moduleVersionName = "2.5.5"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -45,7 +45,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibUIUtils"                : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-uiutils",
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
@@ -54,7 +54,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibUtils"                  : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-utils",
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
@@ -63,7 +63,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibWrapper"                : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-wrapper",
                 "apidependenciesList": ["LibUtils", "LibUIUtils"]
         ],
@@ -202,7 +202,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibDeviceNetwork"          : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-device-network",
                 "apidependenciesList": ["LibCommonUtils", "LibText", "LibThread", "LibEncrypt"]
         ],
@@ -222,7 +222,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibThread"]
         ],
         "LibAPK"                    : [
-                "version"            : "2.5.4",
+                "version"            : "2.1.0",
                 "artifactId"         : "lib-utils-apk",
                 "apidependenciesList": ["LibToast", "LibLog", "LibEncrypt"]
         ],
@@ -251,12 +251,12 @@ ext.moduleInfo = [
                 ]
         ],
         "LibDialog"                 : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-dialog",
                 "apidependenciesList": ["LibThread", "LibImage", "LibOS"]
         ],
         "LibNotification"           : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-notification",
                 "apidependenciesList": ["LibDialog", "LibAPK", "LibCommonUtils"]
         ],
@@ -266,12 +266,12 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibAndroid"]
         ],
         "LibSuperAPP"               : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-super-app",
                 "apidependenciesList": ["LibDialog", "LibAPK"]
         ],
         "LibDebug"                  : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-debug",
                 "apidependenciesList": ["LibDialog", "LibToast"]
         ],
@@ -286,7 +286,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibRefresh"]
         ],
         "LibTouchRegion"            : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-touchregion",
                 "apidependenciesList": ["LibCommonUIUtils", "LibOS"]
         ],
@@ -296,7 +296,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
         "LibOS"                     : [
-                "version"            : "2.5.4",
+                "version"            : "2.5.0",
                 "artifactId"         : "lib-android-os",
                 "apidependenciesList": ["LibLog"]
         ]
